# data-analysis-framework

./: .gitignore  db.sqlite3  get_provincial_capital.py  manage.py  pyproject.toml
base/: admin.py  apps.py  models.py  urls.py  views.py
data/: daas_index_list.xlsx
drafts/: ages.py  api_get_index_list.py  association_rules.py  association_rules_read.py  auto_vlookup.py  coefficient_of_variation.py  combination_2022-06-16.py  discretize_and_one_hot.py  download_one_month.py  dropna.py  dtw_mine.ipynb  dtw_mine.py  duplicates.py  gov_bar_data_processing.py  k_means.py  k_means_view.py  pca.py  pca2.py  pca3.py  pca4.py  pca5.py  population.py  read_value_ontologies.py  relative_ordering.py  remove_dispersion_small_col.py  remove_outliers_series_with_median_deviation.py  sort_and_place_numbers.py  squares.py  strip.py  time_series.py  two_data_frames_comparison.py
media/: 3---GovLevelFiltering___Wed_Jun_15_15-16-57_2022_qD09Ale.csv
my_django/: settings.py  urls.py
my_package/: __init__.py
notebooks/: calc_value_ontology.py
scripts/: append_value_ontology.py  append_value_types.py  calc_value_ontology.py
server/: settings.py  urls.py
streamlit_pages/: 🏠_Home.py
techniques/: admin.py  apps.py  interfaces.ts  models.py  technique_exec.py  technique_itp.py  urls.py  views.py
templates/: main.html  navbar.html
tests/: test_my_package.py  test_utils.py
utils/: __init__.py  django_setup.py  gov_bar_data.py  industry_index_info.csv  industry_index_info.xlsx  macro_data_api.py  macro_data_nodes_list.xlsx  provincial_capitals.py  zk2861api.py
(+1080 files in other folders)
