[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["shangdian.han <shangdian.han@2861.wiki>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.2"
scipy = "^1.8.1"
ipykernel = "^6.13.1"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pylint = "^2.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
